--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/action_logout"
-          android:title="退出" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item android:id="@+id/action_history"
+        app:showAsAction="always"
         android:title="历史账单" />
-    <item android:id="@+id/action_unbind"
-        android:title="解除绑定权限" />
+
 </menu>
 
 
