--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#0686f1</color>
     <color name="colorPrimaryDark">#0686f1</color>
     <color name="colorAccent">#035599</color>
+
+    <color  name="white">#ffffff</color>
+    <color  name="c_33333">#333333</color>
+    <color  name="c_cccccc">#cccccc</color>
+    <color name="c_222222">#222222</color>
 </resources>
