--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,4 +83,16 @@
         />
 
 
+
+    <TextView
+        android:id="@+id/tvVersion"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf = "parent"
+        app:layout_constraintBottom_toBottomOf = "parent"
+        android:layout_width="wrap_content"
+        android:textColor="@color/c_222222"
+        android:textSize="16sp"
+        android:layout_margin = "20dp"
+        android:layout_height="wrap_content" />
+
 </android.support.constraint.ConstraintLayout>
