--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,15 @@
         android:layout_height="wrap_content" />
 
 
-    <EditText
+    <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/etInput"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:hint="@string/input_url"
+        android:maxLines="3"
+        android:enabled="false"
         android:layout_margin="20dp"
-        android:inputType="text"
-        android:textColor="#ff0000"
+        android:textColor="@color/c_222222"
         android:textColorHint="#cccccc"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -58,13 +59,12 @@
         android:id="@+id/tvListenerMsg"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf = "parent"
-        app:layout_constraintTop_toBottomOf = "@+id/etInput"
         app:layout_constraintBottom_toTopOf = "@+id/btnAction"
         android:layout_width="0dp"
         android:textColor="@color/c_222222"
         android:textSize="16sp"
         android:layout_margin = "20dp"
-        android:layout_height="0dp" />
+        android:layout_height="100dp" />
 
 
     <Button
